# node-network

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  Trunk.toml  eslint.config.js  index.html  next.config.mjs  package-lock.json  package.json  panda.config.ts  park-ui.json  pnpm-lock.yaml  postcss.config.cjs  postcss.config.mjs  script.js  styles.scss  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts
app/: .gitignore  Cargo.toml  tauri.conf.json
app/capabilities/: default.json
app/icons/: icon.icns
app/src/: app.rs  lib.rs  main.rs
assets/: cert1.cer  cert1.key  hubnode.cer  hubnode.db  hubnode.key  server.db  server.key
assets/node/: hubnode.cer
assets/server/: .cer  .db
assets/tui/: main-menu-help.txt  welcome.txt
crates/cert-gen/: Cargo.toml
crates/cert-gen/src/: main.rs
crates/config-builder/: Cargo.toml
crates/config-builder/src/: main.rs
crates/db-types/: Cargo.toml
crates/db-types/src/: lib.rs
crates/gen-cert-der/: Cargo.toml
crates/hub-node/: Cargo.toml
crates/hubnode/: Cargo.toml
crates/hubnode/src/: lib.rs  main.rs
crates/macro-derive/: Cargo.toml
crates/netprotocol/: Cargo.toml
crates/netprotocol/src/: lib.rs  node.rs  packet.rs  tls.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs  main.rs
crates/protocol/: Cargo.toml  build.rs  protocol.proto
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/tool-code/: Cargo.toml
crates/tool-code/src/: lib.rs  lock.rs  packet.rs  quinn.rs  x509.rs
crates/tool-code/src/ext/: base64.rs  mod.rs  quinn.rs  rmp_serde.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  lock.rs  logger.rs
crates/utils/src/ext/: logger_builder.rs  mod.rs  quinn.rs
crates/utils/src/ext/vecu8/: borsh.rs  cbor.rs  certder.rs  mod.rs  msgpack.rs  protobuf.rs
src/: app.rs  github-logo-icon.tsx  invoke.rs  lib.rs  main.rs  main.tsx  menubar.rs  root.rs  system.rs  title-bar.tsx  viewport.tsx  window.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: layout.tsx  page.tsx
src/window/: eyebrow.rs  face.rs  mod.rs
tui/: Cargo.toml
tui/src/: app.rs  main.rs  terminal.rs
ui/: index.tsx  main.tsx  style.css
ui/components/: async_error.tsx  container.tsx  index.tsx
ui/components/window/: brow.tsx  chat_frame.tsx  frame.tsx  index.tsx
ui/root/: async_error.tsx  chat_ui.tsx  error_capture.tsx  error_view.tsx  index.tsx  login_ui.tsx  view.tsx  window.tsx
ui/viewport/: center-panel.tsx  mod.tsx
ui/window/: center-panel.tsx  mod.tsx  side-panel.tsx
web/: Cargo.toml  Trunk.toml  index.html  script.js  styles.scss
web/app/: Cargo.toml
web/src/: invoke.rs  root.rs
web/src/window/: eyebrow.rs  face.rs  jaw.rs  mod.rs
web/src/window/face/: demo.rs  landing.rs  mod.rs
web/tauri-app/: Cargo.toml  tauri.conf.json
web/tauri-app/src/: main.rs
webapp/: Cargo.toml  tauri.conf.json
webapp/src/: main.rs
websrc/: background.tsx  eyebrow.tsx  jaw.tsx  main.tsx  render.tsx  style.css  styles.scss  tailwind.css  window.tsx
websrc/face/: error.tsx  home.tsx  hub-node-browser.tsx  landing.tsx  mod.tsx
websrc/widgets/: button.tsx  mod.tsx
websrc/widgets/button/: image-button.tsx  mod.tsx
