[workspace]
members = ["./crates/*", "./webapp"]
package.version = "0.1.0"
package.edition = "2021"

[package]
name = "node-network"
version.workspace = true
edition.workspace = true

[dependencies]
tool-code = { path = "./crates/tool-code" }
netprotocol = { path = "./crates/netprotocol" }

eyre = "0.6.12" #错误处理
