[workspace]
members = ["./crates/*", "./webapp"]
package.version = "0.1.0"
package.edition = "2021"

[package]
name = "node-network"
version.workspace = true
edition.workspace = true

[dependencies]
tool-code = { path = "./crates/tool-code" }
netprotocol = { path = "./crates/netprotocol" }
db-types = { path = "./crates/db-types" }

anyhow = "1.0.86"                                   #错误处理
tokio = { version = "1.38.0", features = ["full"] } #异步运行时

serde = { version = "1.0.204", features = ["derive", "rc"] } #编解码特性
rmp-serde = "1.3.0"                                          #MessagePack编解码
