[package]
name = "app"
version = "0.0.0"
edition = "2021"

[lib]
name = "_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = [] }
serde_json = "1.0.135"

tauri-plugin-prevent-default = "1.0.1"
tauri-plugin-opener = "2.2.3"
tauri-plugin-os = "2.2.0"

utils = { path = "../crates/utils" }
protocol = { path = "../crates/protocol" }

anyhow = "1.0.95"
tokio = { version = "1.42.0", features = [
    "rt-multi-thread",
    "parking_lot",
    "macros",
] }
parking_lot = "0.12.3"

quinn = "0.11.6"
rcgen = "0.13.2"
uuid = { version = "1.11.0", features = ["v4"] }
prost = "0.13.4"
