[package]
name = "app"
version = "0.0.0"
edition = "2021"

[lib]
name = "_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
serde_json = "1.0.137"

tauri-plugin-prevent-default = "1.0.2"
tauri-plugin-log = "2.2.0"
tauri-plugin-opener = "2.2.5"
tauri-plugin-os = "2.2.0"

utils = { path = "../crates/utils" }
protocol = { path = "../crates/protocol" }

anyhow = "1.0.95"
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "parking_lot",
    "macros",
] }
parking_lot = "0.12.3"
log = "0.4.25"
quinn = "0.11.6"
rcgen = "0.13.2"
uuid = { version = "1.12.1", features = ["v4"] }
