[package]
name = "demo-app"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
eyre = "0.6.12"
tauri = { version = "1.6.8", features = ["window-start-dragging"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
window-shadows = "0.2.2"
opener = "0.7.1"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
