[package]
name = "web"
version.workspace = true
edition.workspace = true

[dependencies]
yew = { version = "0.21.0", features = ["csr"] } #HTML渲染框架

wasm-bindgen = "0.2.92"         #Wasm
wasm-bindgen-futures = "0.4.42" #Wasm异步
js-sys = "0.3.69"               #JS绑定

serde = { version = "1.0.203", features = ["derive"] } #编解码特性
serde-wasm-bindgen = "0.6.5"                           #JS绑定变量编解码
