[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] } #Tauri构建脚本

[features]
custom-protocol = ["tauri/custom-protocol"] #在生产环境不要删除

[dependencies]
tauri = { version = "1.7.2", features = [
    "window-minimize",
    "window-maximize",
    "window-close",
    "window-start-dragging",
    "window-unmaximize",
] } #Web窗口
window-shadows = "0.2.2" #Tauri窗口阴影，在2.0之前仍然需要

tool-code = { path = "../crates/tool-code" }
node = { path = "../crates/node" }

anyhow = "1.0.86"                                   #错误处理
tokio = { version = "1.40.0", features = ["full"] } #异步运行时

opener = "0.7.2" #使用系统默认方式打开
