[package]
name = "config-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"                                   #错误处理
clap = { version = "4.5.15", features = ["derive"] } #命令行参数解析

rcgen = "0.13.1"                                 #自签名X.509证书生成
uuid = { version = "1.10.0", features = ["v4"] } #通用唯一标识符
