[package]
name = "hubnode"
version = "0.1.0"
edition = "2021"

[dependencies]
tool-code = { path = "../tool-code" }

anyhow = "1.0.86"                                   #错误处理
tokio = { version = "1.39.2", features = ["full"] } #异步运行时

tracing = "0.1.40"            #日志生产者
tracing-subscriber = "0.3.18" #日志消费者

quinn = "0.11.3" #QUIC协议

serde = { version = "1.0.208", features = ["derive"] } #编解码特性
