[package]
name = "netprotocol"
version = "0.1.0"
edition = "2021"

[dependencies]
tool-code = { path = "../tool-code" }

anyhow = "1.0.86"                                   #错误处理
tokio = { version = "1.38.0", features = ["full"] } #异步运行时

quinn = "0.11.2"                                           #QUIC协议
rustls = { version = "0.23.11", default-features = false } #TLS加密
rcgen = "0.13.1"                                           #自签名X.509证书生成
uuid = { version = "1.10.0", features = ["v4"] }           #通用唯一标识符
hickory-resolver = "0.24.1"                                #DNS解析器

serde = { version = "1.0.204", features = ["derive", "rc"] } #编解码特性
rmp-serde = "1.3.0"                                          #MessagePack编解码
