[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
tool-code = { path = "../tool-code" }

anyhow = "1.0.86"                                     #错误处理
tokio = { version = "1.39.2", features = ["macros"] } #异步运行时

tracing = "0.1.40"            #日志生产者
tracing-subscriber = "0.3.18" #日志消费者

quinn = "0.11.3"                                 #QUIC协议
rustls = "0.23.12"                               #TLS加密
rcgen = "0.13.1"                                 #自签名X.509证书生成
uuid = { version = "1.10.0", features = ["v4"] } #通用唯一标识符
hickory-resolver = "0.24.1"                      #DNS解析器

serde = { version = "1.0.204", features = ["derive"] } #编解码特性
rmp-serde = "1.3.0"                                    #MessagePack编解码

ratatui = "0.27.0"     #TUI库
tui-textarea = "0.5.1" #TUI文本框库
