[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
tool-code = { path = "../tool-code" }

anyhow = "1.0.86"                                   #错误处理
tokio = { version = "1.40.0", features = ["full"] } #异步运行时

quinn = "0.11.5"                                 #QUIC协议
rcgen = "0.13.1"                                 #自签名X.509证书生成
uuid = { version = "1.10.0", features = ["v4"] } #通用唯一标识符
