[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tool-code = { path = "../tool-code" }
netprotocol = { path = "../netprotocol" }

eyre = "0.6.12"                                     #错误处理
tokio = { version = "1.38.0", features = ["full"] } #异步运行时
tracing = "0.1.40"                                  #日志生产者
tracing-subscriber = "0.3.18"                       #日志消费者

serde = { version = "1.0.203", features = ["derive"] } #编解码特性
rmp-serde = "1.3.0"                                    #MessagePack编解码

sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
] } #数据库交互
