[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
protocol = { path = "../protocol" }

anyhow = "1.0.95"
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "parking_lot",
    "macros",
] }
parking_lot = "0.12.3"
log = "0.4.25"
flexi_logger = "0.29.8"

quinn = "0.11.6"
