[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94" #错误处理

x509-parser = "0.16.0" #X.509证书解码
quinn = "0.11.6"       #QUIC协议

serde = { version = "1.0.216", features = ["derive"] } #编解码特性
rmp-serde = "1.3.0"                                    #MessagePack编解码
base64 = "0.22.1"                                      #Base64编解码
