[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
base64 = "0.22.1"
x509-parser = "0.16.0"
quinn = "0.11.6"
log = "0.4.22"
flexi_logger = "0.29.8"
nu-ansi-term = "0.50.1"
prost = "0.13.4"
